--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="container">
       <header>
-        <h2 class="heading">Muhammad Syamil Hamami</h2>
+        <h2 class="heading name">Muhammad Syamil Hamami</h2>
+        <h3 class="heading title">Backend Developer</h3>
       </header>
 
       <aside>
@@ -76,7 +77,7 @@
               </tr>
               <tr>
                 <td>Year:</td>
-                <td>2021 - Now</td>
+                <td>2018 - 2021</td>
               </tr>
             </tbody>
           </table>
