--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
     <title>CV | Muhammad Syamil Hamami</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
       </header>
 
       <aside>
-        <img src="./assets/profile.png" alt="" />
+        <img src="/assets/profile.png" alt="" />
         <h3>Contacts</h3>
         <ul>
           <li><a href="#">Email</a></li>
@@ -31,7 +31,12 @@
       <main>
         <div class="profile">
           <h3>Profile</h3>
-          <p>As a Backend Developer, I am committed to ensuring the quality and reliability of applications, as well as continuing to innovate in response to evolving technological demands. I am happy to contribute to projects that require backend development.</p>
+          <p>
+            As a Backend Developer, I am committed to ensuring the quality and
+            reliability of applications, as well as continuing to innovate in
+            response to evolving technological demands. I am happy to contribute
+            to projects that require backend development.
+          </p>
         </div>
         <div class="skills">
           <h3>Skills</h3>
