--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>CV | Muhammad Syamil Hamami</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
       </header>
 
       <aside>
-        <img src="/assets/profile.png" alt="" />
+        <img src="./assets/images/profile.png" alt="" />
         <h3>Contacts</h3>
         <ul>
           <li><a href="#">Email</a></li>
