--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <img src="./assets/images/profile.png" alt="" />
         <h3>Contacts</h3>
         <ul>
-          <li><a href="#">Email</a></li>
+          <li>msyamil.hamami@gmail.com</li>
           <li>
-            <p><a href="#">Github</a></p>
+            <p><a href="https://github.com/syamilh">Github</a></p>
           </li>
           <li>
-            <p><a href="#">Gitlab</a></p>
+            <p><a href="https://gitlab.com/syamilh">Gitlab</a></p>
           </li>
           <li><p>Bandung, Indonesia</p></li>
         </ul>
@@ -89,7 +89,7 @@
         </div>
       </main>
 
-      <footer>Made by Muhammad Syamil Hamami</footer>
+      <footer><p>Made by Muhammad Syamil Hamami</p></footer>
     </div>
   </body>
 </html>
